Home: Private Club

--- a/index.html
+++ b/index.html
@@ -11,52 +11,134 @@
 </head>
 
 <body>
-
+    <!-- <div class="header--sub container-fluid">
+        <a href="#">Schedule your totally free consultant call!</a>
+        <div class="header--sub-close">x</div>
+    </div> -->
     <section id="header">
         <div class="header--outer">
-            <div class="header--sub container-fluid">
-                <a href="#">Schedule your totally free consultant call!</a>
-                <div class="header--sub-close">x</div>
-            </div>
             <div class="header--main container-fluid">
                 <div class="header--left"></div>
                 <div class="header--logo">
                     <h1>Winston Thomas</h1>
                     <h6>Your trusted personal assistants</h6>
                 </div>
-                <div class="header--right"></div>
+                <div class="header--right">
+                    <i class="fal fa-user"></i>
+                </div>
             </div>
             <div class="header--menu container-fluid">
                 <div class="header--menu-logo"></div>
                 <div class="header--menu-wrapper">
                     <ul class="header--menu-primary">
-                        <li class="header--menu-item is-active"><a href="#"></a>Homepage</li>
-                        <li class="header--menu-item"><a href="#"></a>Membership</li>
-                        <li class="header--menu-item"><a href="#"></a>Services</li>
-                        <li class="header--menu-item"><a href="#"></a>Winston's Choice</li>
-                        <li class="header--menu-item"><a href="#"></a>Private Club</li>
+                        <li class="header--menu-item is-active"><a href="#">Homepage</a></li>
+                        <li class="header--menu-item"><a href="#">Membership</a></li>
+                        <li class="header--menu-item"><a href="#">Services</a></li>
+                        <li class="header--menu-item"><a href="#">Winston's Choice</a></li>
+                        <li class="header--menu-item"><a href="#">Private Club</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
+    <div class="header--spacer"></div>
 
-    <div style="height: 50vh;"></div>
+    <section id="hero">
+    </section>
+
+    <section id="intro">
+        <div class="container">
+            <h5 class="title">About Winston Thomas</h5>
+            <h2>Our services gives you option to better utilize your everyday schedule. We are your very own Personal
+                Assistants. Our goal is to enhance your dynamic lifestyle and connect you to the finest things life has
+                to offer. We are at your service every minute of the day, because every moment is precious.</h2>
+            <p>more in</p>
+            <ul class="intro--menu">
+                <li class="intro--menu-link"><a href="#">About Us</a></li>
+                <li class="intro--menu-link"><a href="#">Our Services</a></li>
+                <li class="intro--menu-link"><a href="#">Memberships</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <div style="height: 100vh;"></div>
+
+    <section id="private-club">
+        <div class="row">
+            <div class="col-md-7 private-club--left">
+                <div class="content-top">
+                    <h1>Private Club</h1>
+                    <p>Dolor diam eirmod lorem vero duo erat amet vero duo erat amet kasd gubergren. Labore gubergren
+                        duo lorem est sanctus et diam kasd eirmod. Et dolor sanctus invidunt dolore diam sanctus. Labore
+                        takimata sadipscing ea eos rebum. No consetetur eirmod gubergren erat amet. Et.</p>
+                    <p>Dolor est sit amet no takimata accusam et diam diam sed. Ut clita stet est lorem gubergren amet
+                        kasd aliquyam,.</p>
+                </div>
+                <div class="content-bottom">
+                    <h5>Coming Soon</h5>
+                    <p>Rebum no sea clita ea et ut lorem justo sanctus et, justo ipsum ipsum sadipscing sed vero amet
+                        accusam tempor clita.</p>
+                </div>
+            </div>
+            <div class="col-md-5 private-club--right">
+                <img src="./img/private-club.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section id="enquiry">
+        <div class="container">
+            <h5>Enjoy what you see?</h5>
+            <a href="#">
+                <h2>Enquire Membership</h2>
+            </a>
+            <span class="divider small"></span>
+            <a href="#">
+                <h5>Or schedule your<br>free consultant call</h5>
+            </a>
+        </div>
+    </section>
+
+    <section id="mailling-list" class="container">
+        <div class="mailing-list-title">
+            <h6>Weekly precious in your box</h6>
+            <h2>JOIN THE LIST</h2>
+        </div>
+        <div class="mailing-list-form">
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Email">
+            <input type="submit" class="button" value="Join">
+        </div>
+    </section>
 
     <section id="footer">
         <div class="footer--outer">
             <div class="footer--sub"></div>
             <div class="footer--main">
                 <ul class="footer--menu">
-                    <li class="footer--menu-item is-active"><a href="#"></a>Homepage</li>
-                    <li class="footer--menu-item"><a href="#"></a>Membership</li>
-                    <li class="footer--menu-item"><a href="#"></a>Services</li>
-                    <li class="footer--menu-item"><a href="#"></a>Winston's Choice</li>
-                    <li class="footer--menu-item"><a href="#"></a>Private Club</li>
+                    <li class="footer--menu-item is-active"><a href="#">Homepage</a></li>
+                    <li class="footer--menu-item"><a href="#">Membership</a></li>
+                    <li class="footer--menu-item"><a href="#">Services</a></li>
+                    <li class="footer--menu-item"><a href="#">Winston's Choice</a></li>
+                    <li class="footer--menu-item"><a href="#">Private Club</a></li>
                 </ul>
             </div>
+            <ul class="footer--social">
+                <li class="footer--social-item">
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="footer--social-item">
+                    <a href="#"><i class="fab fa-twitter-square"></i></a>
+                </li>
+                <li class="footer--social-item">
+                    <a href="#"><i class="fab fa-youtube-square"></i></a>
+                </li>
+                <li class="footer--social-item">
+                    <a href="#"><i class="fab fa-google-plus-square"></i></a>
+                </li>
+            </ul>
             <div class="footer--copyright">
-                &copy; 2019 Copyright Karima Creative LLC. All rights reserved.
+                &copy; 2019 Winston Thomas. All rights reserved.
             </div>
         </div>
     </section>
