--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
     <div class="header--spacer"></div>
 
     <section id="hero">
+        <div class="hero--carousel">
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-01.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-02.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-03.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-04.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-05.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-06.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/at-your-service-07.jpg" alt="">
+            </div>
+        </div>
+        <div class="hero--carousel-overlay">
+            <h1>What do you desire?</h1>
+        </div>
     </section>
 
     <section id="intro">
@@ -55,22 +81,39 @@
             <ul class="intro--menu">
                 <li class="intro--menu-link"><a href="#">About Us</a></li>
                 <li class="intro--menu-link"><a href="#">Our Services</a></li>
-                <li class="intro--menu-link"><a href="#">Memberships</a></li>
+                <li class="intro--menu-link"><a href="#">Membership</a></li>
             </ul>
         </div>
     </section>
 
     <div style="height: 100vh;"></div>
 
+    <section id="winstons-choice">
+        <div class="container">
+            <div class="section-title">
+                <h1>Winston's Choice</h1>
+                <h5>Curated Life-style Notes<br>by Winston Thomas</h5>
+                <span class="divider small"></span>
+            </div>
+        </div>
+    </section>
+
     <section id="private-club">
         <div class="row">
             <div class="col-md-7 private-club--left">
                 <div class="content-top">
-                    <h1>Private Club</h1>
-                    <p>Dolor diam eirmod lorem vero duo erat amet vero duo erat amet kasd gubergren. Labore gubergren
-                        duo lorem est sanctus et diam kasd eirmod. Et dolor sanctus invidunt dolore diam sanctus. Labore
+                    <div class="section-title gold left">
+                        <h1>Private Club</h1>
+                        <h5>Lorem Ipsum Dolor Sit Amet</h5>
+                        <span class="divider small"></span>
+                    </div>
+                    <p>Dolor diam eirmod lorem vero duo erat amet vero duo erat amet kasd gubergren. Labore
+                        gubergren
+                        duo lorem est sanctus et diam kasd eirmod. Et dolor sanctus invidunt dolore diam sanctus.
+                        Labore
                         takimata sadipscing ea eos rebum. No consetetur eirmod gubergren erat amet. Et.</p>
-                    <p>Dolor est sit amet no takimata accusam et diam diam sed. Ut clita stet est lorem gubergren amet
+                    <p>Dolor est sit amet no takimata accusam et diam diam sed. Ut clita stet est lorem gubergren
+                        amet
                         kasd aliquyam,.</p>
                 </div>
                 <div class="content-bottom">
@@ -88,11 +131,11 @@
     <section id="enquiry">
         <div class="container">
             <h5>Enjoy what you see?</h5>
-            <a href="#">
+            <a href="#" class="link underline">
                 <h2>Enquire Membership</h2>
             </a>
             <span class="divider small"></span>
-            <a href="#">
+            <a href="#" class="link underline">
                 <h5>Or schedule your<br>free consultant call</h5>
             </a>
         </div>
@@ -145,6 +188,7 @@
     <!-- Javascript -->
 
     <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.flickity.js"></script>
     <script src="/js/app.js"></script>
 
 </body>
