--- a/index.html
+++ b/index.html
@@ -155,10 +155,71 @@
     </section>
 
     <section id="membership">
-        <div class="section-title">
-            <h1>Membership</h1>
-            <h5>Your Trusted<br>Personal Assistants</h5>
-            <span class="divider small"></span>
+        <div class="container">
+            <div class="section-title">
+                <h1>Membership</h1>
+                <h5>Your Trusted<br>Personal Assistants</h5>
+                <span class="divider small"></span>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="membership--item">
+                        <div class="membership--item-image">
+                            <img src="./img/membership/card-sapphire.png" alt="">
+                        </div>
+                        <div class="membership--item-info">
+                            <h3>Sapphire</h3>
+                            <ul>
+                                <li>$25 Request Fee</li>
+                                <li>Sapphire Monthly Care Package</li>
+                                <li class="is-disabled">Upgrade Program</li>
+                                <li class="is-disabled">Private Club Access</li>
+                            </ul>
+                        </div>
+                        <div class="membership--item-fee">
+                            <span>$</span>2,500
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="membership--item">
+                        <div class="membership--item-image">
+                            <img src="./img/membership/card-ruby.png" alt="">
+                        </div>
+                        <div class="membership--item-info">
+                            <h3>Ruby</h3>
+                            <ul>
+                                <li>$25 Request Fee</li>
+                                <li>Ruby Monthly Care Package</li>
+                                <li>Upgrade Program</li>
+                                <li class="is-disabled">Private Club Access</li>
+                            </ul>
+                        </div>
+                        <div class="membership--item-fee">
+                            <span>$</span>5,000
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="membership--item">
+                        <div class="membership--item-image">
+                            <img src="./img/membership/card-diamond.png" alt="">
+                        </div>
+                        <div class="membership--item-info">
+                            <h3>Diamond</h3>
+                            <ul>
+                                <li>No Request Fee</li>
+                                <li>Diamond Monthly Care Package</li>
+                                <li>Upgrade Program</li>
+                                <li>Private Club Access</li>
+                            </ul>
+                        </div>
+                        <div class="membership--item-fee">
+                            <span>$</span>10,000
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
