--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
 
     <section id="intro">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title reveal">
                 <h5>About Winston Thomas</h5>
                 <span class="divider small"></span>
             </div>
-            <h2>Our services gives you option to better utilize your everyday schedule. We are your very own Personal
+            <h2 class="reveal">Our services gives you option to better utilize your everyday schedule. We are your very
+                own Personal
                 Assistants. Our goal is to enhance your dynamic lifestyle and connect you to the finest things life has
                 to offer. We are at your service every minute of the day, because every moment is precious.</h2>
-            <img src="./img/signature.png" alt="Winston Thomas" class="signature">
+            <img src="./img/signature.png" alt="Winston Thomas" class="signature reveal">
             <p>more in</p>
             <ul class="intro--menu">
                 <li class="intro--menu-link"><a href="#">About Us</a></li>
@@ -167,17 +168,22 @@
                         <div class="membership--item-image">
                             <img src="./img/membership/card-sapphire.png" alt="">
                         </div>
-                        <div class="membership--item-info">
-                            <h3>Sapphire</h3>
-                            <ul>
-                                <li>$25 Request Fee</li>
-                                <li>Sapphire Monthly Care Package</li>
-                                <li class="is-disabled">Upgrade Program</li>
-                                <li class="is-disabled">Private Club Access</li>
-                            </ul>
-                        </div>
-                        <div class="membership--item-fee">
-                            <span>$</span>2,500
+                        <div>
+                            <div class="membership--item-info">
+                                <h2>Sapphire</h2>
+                                <ul>
+                                    <li>$25 Request Fee</li>
+                                    <li>Sapphire Monthly Care Package</li>
+                                    <li class="is-disabled">Upgrade Program</li>
+                                    <li class="is-disabled">Private Club Access</li>
+                                </ul>
+                            </div>
+                            <div class="membership--item-fee">
+                                <span>$</span>2,500
+                            </div>
+                            <div class="membership--item-apply">
+                                <a href="#">Apply</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -186,17 +192,22 @@
                         <div class="membership--item-image">
                             <img src="./img/membership/card-ruby.png" alt="">
                         </div>
-                        <div class="membership--item-info">
-                            <h3>Ruby</h3>
-                            <ul>
-                                <li>$25 Request Fee</li>
-                                <li>Ruby Monthly Care Package</li>
-                                <li>Upgrade Program</li>
-                                <li class="is-disabled">Private Club Access</li>
-                            </ul>
-                        </div>
-                        <div class="membership--item-fee">
-                            <span>$</span>5,000
+                        <div>
+                            <div class="membership--item-info">
+                                <h2>Ruby</h2>
+                                <ul>
+                                    <li>$25 Request Fee</li>
+                                    <li>Ruby Monthly Care Package</li>
+                                    <li>Upgrade Program</li>
+                                    <li class="is-disabled">Private Club Access</li>
+                                </ul>
+                            </div>
+                            <div class="membership--item-fee">
+                                <span>$</span>5,000
+                            </div>
+                            <div class="membership--item-apply">
+                                <a href="#">Apply</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -205,18 +216,39 @@
                         <div class="membership--item-image">
                             <img src="./img/membership/card-diamond.png" alt="">
                         </div>
-                        <div class="membership--item-info">
-                            <h3>Diamond</h3>
-                            <ul>
-                                <li>No Request Fee</li>
-                                <li>Diamond Monthly Care Package</li>
-                                <li>Upgrade Program</li>
-                                <li>Private Club Access</li>
-                            </ul>
+                        <div>
+                            <div class="membership--item-info">
+                                <h2>Diamond</h2>
+                                <ul>
+                                    <li>No Request Fee</li>
+                                    <li>Diamond Monthly Care Package</li>
+                                    <li>Upgrade Program</li>
+                                    <li>Private Club Access</li>
+                                </ul>
+                            </div>
+                            <div class="membership--item-fee">
+                                <span>$</span>10,000
+                            </div>
+                            <div class="membership--item-apply">
+                                <a href="#">Apply</a>
+                            </div>
                         </div>
-                        <div class="membership--item-fee">
-                            <span>$</span>10,000
-                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="membership--item master">
+                <div class="membership--item-image">
+                    <img src="./img/membership/card-master.png" alt="">
+                </div>
+                <div>
+                    <div class="membership--item-info">
+                        <h2>Master</h2>
+                        <ul>
+                            <li>World Wide Service</li>
+                        </ul>
+                    </div>
+                    <div class="membership--item-fee">
+                        Invitation<br>Only
                     </div>
                 </div>
             </div>
@@ -393,6 +425,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/jquery.typed.js"></script>
     <script src="/js/jquery.flickity.js"></script>
+    <script src="/js/scrollreveal.js"></script>
     <script src="/js/app.js"></script>
 
 </body>
