--- a/index.html
+++ b/index.html
@@ -76,25 +76,40 @@
                 <p><span class="hero--carousel-typed">A last minute get away?</span></p>
             </div>
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-01.jpg" alt="">
+                <img src="./img/at-your-service/01.jpg" alt="">
             </div>
             <!-- <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-02.jpg" alt="">
+                <img src="./img/at-your-service/02.jpg" alt="">
             </div> -->
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-03.jpg" alt="">
+                <img src="./img/at-your-service/03.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-04.jpg" alt="">
+                <img src="./img/at-your-service/04.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-05.jpg" alt="">
+                <img src="./img/at-your-service/05.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-06.jpg" alt="">
+                <img src="./img/at-your-service/06.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
-                <img src="./img/at-your-service/at-your-service-07.jpg" alt="">
+                <img src="./img/at-your-service/07.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/08.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/09.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/11.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/11.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <img src="./img/at-your-service/12.jpg" alt="">
             </div>
         </div>
     </section>
@@ -163,14 +178,14 @@
                 <span class="divider small"></span>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-sapphire.png" alt="">
                         </div>
                         <div>
                             <div class="membership--item-info">
-                                <h2>Sapphire</h2>
+                                <h2>Sapphire Key</h2>
                                 <ul>
                                     <li>$25 Request Fee</li>
                                     <li>Sapphire Monthly Care Package</li>
@@ -187,14 +202,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-ruby.png" alt="">
                         </div>
                         <div>
                             <div class="membership--item-info">
-                                <h2>Ruby</h2>
+                                <h2>Ruby Key</h2>
                                 <ul>
                                     <li>$25 Request Fee</li>
                                     <li>Ruby Monthly Care Package</li>
@@ -211,14 +226,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-diamond.png" alt="">
                         </div>
                         <div>
                             <div class="membership--item-info">
-                                <h2>Diamond</h2>
+                                <h2>Diamond Key</h2>
                                 <ul>
                                     <li>No Request Fee</li>
                                     <li>Diamond Monthly Care Package</li>
@@ -231,6 +246,30 @@
                             </div>
                             <div class="membership--item-apply">
                                 <a href="#">Apply</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="membership--item">
+                        <div class="membership--item-image">
+                            <img src="./img/membership/card-master.png" alt="">
+                        </div>
+                        <div>
+                            <div class="membership--item-info">
+                                <h2>Master Key</h2>
+                                <ul>
+                                    <li>No Request Fee</li>
+                                    <li>Master Monthly Care Package</li>
+                                    <li>World Wide Service</li>
+                                    <li>Private Club Access</li>
+                                </ul>
+                            </div>
+                            <!-- <div class="membership--item-fee">
+                                <span>$</span>10,000
+                            </div> -->
+                            <div class="membership--item-apply">
+                                <br><br>Invitation<br>Only
                             </div>
                         </div>
                     </div>
