--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         </div>
     </section>
 
-    <section id="mailling-list" class="container">
+    <section id="mailing-list" class="container">
         <div class="mailing-list-title">
             <h6>Weekly precious in your box</h6>
             <h2>JOIN THE LIST</h2>
