--- a/peter.html
+++ b/peter.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Winston Thomas</title>
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
 </head>
 
 <body class="peter logged-out">
@@ -45,10 +47,10 @@
                     </div>
                     <ul class="header--menu-primary">
                         <li class="header--menu-item is-active"><a href="#">Homepage</a></li>
-                        <li class="header--menu-item"><a href="#">Memberships</a></li>
-                        <li class="header--menu-item"><a href="#">Services</a></li>
-                        <li class="header--menu-item"><a href="#">Winston's Choice</a></li>
-                        <li class="header--menu-item"><a href="#">Private Club</a></li>
+                        <li class="header--menu-item"><a href="#services">Services</a></li>
+                        <li class="header--menu-item"><a href="#membership">Memberships</a></li>
+                        <li class="header--menu-item"><a href="#winstons-choice">Winston's Choice</a></li>
+                        <li class="header--menu-item"><a href="#private-club-peter">Private Club</a></li>
                     </ul>
                     <div class="header--menu-mobile-footer">
                         <ul class="header--menu-mobile-footer-social">
@@ -565,34 +567,34 @@
                 </div>
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/01.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/01.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/02.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/02.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/03.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/03.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/04.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/04.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/05.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/05.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/06.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/06.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/07.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/07.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/08.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/08.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/09.jpg" alt="">
+                <img data-flickity-lazyload="./img/private-club/09.jpg" alt="">
             </div>
             <div class="private-club-peter--carousel-item">
-                <img src="./img/private-club/10.jpg" alt="">
+                <img data-flickity-lazyloads="./img/private-club/10.jpg" alt="">
             </div>
         </div>
     </section>
