--- a/peter.html
+++ b/peter.html
@@ -639,11 +639,12 @@
                 </ul>
                 <img src="./img/winston-thomas-key-logo.svg" class="footer--logo">
                 <ul class="footer--menu">
-                    <li class="footer--menu-item is-active"><a href="#">Homepage</a></li>
                     <li class="footer--menu-item"><a href="#">Memberships</a></li>
                     <li class="footer--menu-item"><a href="#">Services</a></li>
                     <li class="footer--menu-item"><a href="#">Winston's Choice</a></li>
                     <li class="footer--menu-item"><a href="#">Private Club</a></li>
+                    <li class="footer--menu-item"><a href="#">About Us</a></li>
+                    <li class="footer--menu-item"><a href="#">Contact</a></li>
                     <li class="footer--menu-item"><a href="#">FAQ</a></li>
                 </ul>
             </div>
