--- a/peter.html
+++ b/peter.html
@@ -373,15 +373,15 @@
                                     <li>-</li>
                                     <li>Private Club Access</li>
                                     <li>Bi-yearly<br>Networking Event</li>
-                                    <li>Invivation<br>Only</li>
+                                    <!-- <li>Invivation<br>Only</li> -->
                                 </ul>
                             </div>
                             <!-- <div class="membership--item-fee">
                                         <span>$</span>10,000
                                     </div> -->
-                            <!-- <div class="membership--item-apply">
+                            <div class="membership--item-apply">
                                 Invitation<br>Only
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
