--- a/peter.html
+++ b/peter.html
@@ -662,11 +662,11 @@
 
     <!-- Javascript -->
 
-    <script src="/js/jquery.js"></script>
-    <script src="/js/jquery.typed.js"></script>
-    <script src="/js/jquery.flickity.js"></script>
-    <script src="/js/scrollreveal.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery.typed.js"></script>
+    <script src="./js/jquery.flickity.js"></script>
+    <script src="./js/scrollreveal.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 
